Moved to Angular material design. Many layout problems to solve...

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,30 @@
 :host {
   height: 100%;
-
+  display:flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
+
+
+md-toolbar {
+  //flex: 1;
+  //width: 50%;
+  margin: 0;
+  padding: 0;
+}
+
+/*router-outlet {*/
+  /*//flex: 1;*/
+  /*height: 100%;*/
+  /*background: blue;*/
+  /*width: 50%*/
+/*}*/
+/*app-speechrecorder {*/
+/*//flex: 1;*/
+  /*height: 100%;*/
+  /*background: blue;*/
+  /*margin: 0;*/
+  /*padding: 0;*/
+  /*//width: 50%*/
+/*}*/
